# huffman_encoder_decoder

./: .gitignore  Cargo.toml  README.md  loreipsum.txt
algorithm/: Cargo.toml
algorithm/src/: lib.rs
bench/: Cargo.toml
bench/src/: bench.rs
src/: main.rs
