[package]
name = "algorithm"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6.5", features = ["serde"] }
rayon = "1.10.0"
anyhow = "1.0"
rustc-hash = "2.1.1"

[dependencies.bitvec]
version = "1.0.1"
features = ["serde"]
