[package]
name = "huffman-benchs"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
algorithm = {path = "../algorithm" }

[[bench]]
name = "compression"
harness = false
path = "src/bench.rs"
